<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.detail.DetailActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <include
            android:id="@+id/user_not_found"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            layout="@layout/layout_user_not_found"
            android:visibility="gone"/>
        <include
            android:id="@+id/shimmer"
            layout="@layout/shimmer_detail_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"/>
        <androidx.cardview.widget.CardView
            android:id="@+id/layout_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardElevation="5dp"
            app:cardCornerRadius="5dp"
            android:visibility="gone">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.cardview.widget.CardView
                    android:id="@+id/container_avatar"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    app:cardCornerRadius="60dp"
                    app:cardElevation="5dp"
                    android:layout_margin="10dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true">
                    <ImageView
                        android:id="@+id/detail_avatar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_person"
                        tools:ignore="ContentDescription" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/detail_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_toEndOf="@id/container_avatar"
                    android:fontFamily="@font/quicksand_bold"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/detail_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="10dp"
                    android:textSize="12sp"
                    android:fontFamily="@font/quicksand_regular"
                    android:layout_toEndOf="@id/container_avatar"
                    android:layout_below="@id/detail_name"
                    android:layout_alignParentEnd="true"/>

                <TextView
                    android:id="@+id/detail_bio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/detail_username"
                    android:layout_alignBottom="@id/container_avatar"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_toEndOf="@id/container_avatar"
                    android:ellipsize="end"
                    android:fontFamily="@font/quicksand_regular"
                    android:textSize="12sp" />

                <include
                    android:id="@+id/container_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    layout="@layout/layout_details"
                    android:layout_marginTop="10dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/container_avatar"/>

                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey"
                    android:layout_margin="10dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/container_details"/>
                <TextView
                    android:id="@+id/label_repos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/txt_repository"
                    android:fontFamily="@font/quicksand_medium"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/view"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_repos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/label_repos"
                    android:layout_alignParentBottom="true"
                    android:nestedScrollingEnabled="false"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>