<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/detail_label_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_regular"
        android:text="@string/txt_location"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/detail_location"
        app:layout_constraintEnd_toStartOf="@+id/view_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/detail_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_medium"
        android:textSize="14sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/view_vertical"
        app:layout_constraintTop_toBottomOf="@+id/detail_label_location" />

    <View
        android:id="@+id/view_vertical"
        android:layout_width="2dp"
        android:layout_height="40dp"
        android:background="@color/lightGrey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/detail_label_follower"
        app:layout_constraintStart_toEndOf="@+id/detail_label_location"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/detail_label_follower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_regular"
        android:text="@string/txt_follower"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/detail_follower"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/detail_follower"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_medium"
        android:textSize="14sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/view_vertical2"
        app:layout_constraintStart_toEndOf="@id/view_vertical"
        app:layout_constraintTop_toBottomOf="@+id/detail_label_follower" />

    <View
        android:id="@+id/view_vertical2"
        android:layout_width="2dp"
        android:layout_height="40dp"
        android:background="@color/lightGrey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/detail_label_following"
        app:layout_constraintStart_toEndOf="@+id/detail_label_follower"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/detail_label_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_regular"
        android:text="@string/txt_following"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/detail_following"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view_vertical2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/detail_following"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_medium"
        android:textSize="14sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/view_vertical2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_label_following" />
</androidx.constraintlayout.widget.ConstraintLayout>